[gd_scene load_steps=3 format=3 uid="uid://c5qxr8jyf4kxm"]

[ext_resource type="Script" path="res://scripts/ui/StorageUI.gd" id="1_4qxha"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)

[node name="StorageUI" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_4qxha")

[node name="StoragePanel" type="PanelContainer" parent="."]
layout_mode = 0
position = Vector2(600, 300)
size = Vector2(300, 200)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="StoragePanel"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="StoragePanel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="StoragePanel/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "STORAGE BOX"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="StoragePanel/VBoxContainer/TitleBar"]
layout_mode = 2
text = "X"

[node name="StorageGrid" type="GridContainer" parent="StoragePanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="ButtonContainer" type="HBoxContainer" parent="StoragePanel/VBoxContainer"]
layout_mode = 2

[node name="MoveButton" type="Button" parent="StoragePanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "MOVE"

[node name="DestroyButton" type="Button" parent="StoragePanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "DESTROY"